--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.rider": "2.0.3",
     "com.unity.ide.vscode": "1.2.0",
     "com.unity.postprocessing": "2.3.0",
+    "com.unity.render-pipelines.universal": "8.1.0",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.timeline": "1.3.0-preview.3",
