--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.3.7",
-    "com.unity.ide.rider": "2.0.3",
-    "com.unity.ide.vscode": "1.2.0",
-    "com.unity.postprocessing": "2.3.0",
-    "com.unity.render-pipelines.universal": "8.1.0",
-    "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "3.0.0-preview.1",
-    "com.unity.timeline": "1.3.0-preview.3",
+    "com.unity.ai.navigation": "1.1.1",
+    "com.unity.collab-proxy": "2.0.0",
+    "com.unity.ide.rider": "3.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.postprocessing": "3.2.2",
+    "com.unity.render-pipelines.universal": "14.0.6",
+    "com.unity.test-framework": "1.1.33",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.7.3",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.management": "3.2.10",
+    "com.unity.xr.management": "4.2.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
